# solintent

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
libsolintent/: CMakeLists.txt
libsolintent/ir/: ContractInterface.cpp  ContractInterface.h  ExpressionInterface.cpp  ExpressionInterface.h  ExpressionSummary.cpp  ExpressionSummary.h  ForwardExpressionSummary.h  ForwardIR.h  FunctionInterface.cpp  FunctionInterface.h  IRSummary.cpp  IRSummary.h  IRVisitor.cpp  IRVisitor.h  StatementInterface.cpp  StatementInterface.h  StatementSummary.cpp  StatementSummary.h  StructuralSummary.h
libsolintent/static/: AbstractAnalyzer.cpp  AbstractAnalyzer.h  AbstractContractAnalyzer.h  AbstractExpressionAnalyzer.cpp  AbstractExpressionAnalyzer.h  AbstractFunctionAnalyzer.cpp  AbstractFunctionAnalyzer.h  AbstractStatementAnalyzer.cpp  AbstractStatementAnalyzer.h  AnalysisEngine.cpp  AnalysisEngine.h  BoundChecker.cpp  BoundChecker.h  CondChecker.cpp  CondChecker.h  ContractChecker.cpp  ContractChecker.h  FunctionChecker.cpp  FunctionChecker.h  ImplicitObligation.cpp  ImplicitObligation.h  StatementChecker.cpp  StatementChecker.h
libsolintent/util/: Generic.h  SourceLocation.cpp  SourceLocation.h
scripts/: fix_deps.py
solintent/: CMakeLists.txt  CommandLineInterface.cpp  CommandLineInterface.h  main.cpp
solintent/asserts/: CMakeLists.txt  GasConstraintOnLoops.cpp  GasConstraintOnLoops.h
solintent/patterns/: CMakeLists.txt  DynamicArraysAsFixedContainers.cpp  DynamicArraysAsFixedContainers.h
test/: CMakeLists.txt  CompilerFramework.cpp  CompilerFramework.h  main.cpp
test/libsolintent/ir/: ExpressionSummaryTest.cpp  StatementSummaryTest.cpp  VisitorTest.cpp
test/libsolintent/static/: AnalysisEngineTest.cpp  BoundCheckerTest.cpp  CondCheckerTest.cpp  ObligationTests.cpp  StatementCheckerTests.cpp
test/libsolintent/util/: GenericTest.cpp  SourceLocationTest.cpp
test/solintent/: GasConstraintOnLoopsTest.cpp
